2014-05-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Fix writing to the main (default) region when other regions are
	defined.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):
	* src/gstttmlstyle.c: (gst_ttml_style_translate_generic_font_name),
	(gst_ttml_style_gen_pango_markup):
	Add some FIXME comments.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_translate_generic_font_name),
	(gst_ttml_style_gen_pango_markup):
	Skeleton for remapping generic TTML font names into actual system
	fonts. For now, it simply removes the "default" tag, so we avoid a
	lot of Pango-WARNINGs in the most usual scenario.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation):
	Fix caps nego in 0.10 when there are no compatible caps.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_normalize_length):
	* src/gstttmlattribute.h:
	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns):
	* src/gstttmlstyle.c: (gst_ttml_style_get_attr),
	(gst_ttml_style_gen_pango_markup):
	* src/gstttmlstyle.h:
	Use a default font of 1c as the spec says, and finally render
	correctly font sizes in any length unit. Exactly in ttmlrender
	and approximately in ttmlparse.

2014-05-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns):
	Fix innocuous missig 'break'.

2014-05-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_parse_length_pair_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlforward.h:
	* src/gstttmlrender.c: (gst_ttmlrender_new_region),
	(gst_ttmlrender_show_regions):
	* src/gstttmlutils.c: